--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "lucide-vue-next": "^0.554.0",
+    "pinia": "^3.0.4",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.17",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
