--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "jwt-decode": "^4.0.0",
     "lucide-vue-next": "^0.554.0",
     "pinia": "^3.0.4",
     "sweetalert": "^2.1.2",
