--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "datatables.net": "^2.3.5",
+    "datatables.net-dt": "^2.3.5",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "lucide-vue-next": "^0.554.0",
     "pinia": "^3.0.4",
@@ -25,6 +28,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "^10.6.0",
     "vite": "^7.2.2"
   }
 }
