--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "jwt-decode": "^4.0.0",
     "lucide-vue-next": "^0.554.0",
     "pinia": "^3.0.4",
+    "select2-vue-component": "^6.1.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "vue-multiselect": "^3.4.0",
+    "vue-router": "^4.6.3",
+    "vue3-select-component": "^0.14.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
